[gd_scene load_steps=4 format=2]

[ext_resource path="res://SteamUploader.gd" type="Script" id=1]
[ext_resource path="res://theme.tres" type="Theme" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[node name="SteamUploader" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Form" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5

[node name="Title" type="HBoxContainer" parent="Form"]
margin_right = 984.0
margin_bottom = 30.0

[node name="Logo" type="TextureRect" parent="Form/Title"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 3 )
expand = true

[node name="TitleLabel" type="Label" parent="Form/Title"]
margin_left = 34.0
margin_top = -1.0
margin_right = 226.0
margin_bottom = 29.6667
theme_type_variation = "LabelBig"
text = "Steam Upload GUI"

[node name="AppsToUploadGroup" type="VBoxContainer" parent="Form"]
margin_top = 35.0
margin_right = 984.0
margin_bottom = 276.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AppToUploadLabel" type="Label" parent="Form/AppsToUploadGroup"]
margin_top = -1.0
margin_right = 984.0
margin_bottom = 21.6667
text = "Apps to upload"

[node name="HSeparator2" type="HSeparator" parent="Form/AppsToUploadGroup"]
margin_top = 26.0
margin_right = 984.0
margin_bottom = 36.0
rect_min_size = Vector2( 0, 10 )

[node name="ScrollContainer" type="ScrollContainer" parent="Form/AppsToUploadGroup"]
margin_top = 40.0
margin_right = 984.0
margin_bottom = 241.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AppsToUpload" type="VBoxContainer" parent="Form/AppsToUploadGroup/ScrollContainer"]
unique_name_in_owner = true
margin_right = 984.0
margin_bottom = 201.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AppsErrorMessage" type="Label" parent="Form/AppsToUploadGroup/ScrollContainer/AppsToUpload"]
unique_name_in_owner = true
visible = false
margin_top = -1.0
margin_right = 984.0
margin_bottom = 98.6667
text = "No Apps found!

Correct \"tools\\ContentBuilder\\\" path ?
Do you have vdf files in \"tools\\ContentBuilder\\scripts\\\"?"
align = 1

[node name="UserCredentialsGroup" type="VBoxContainer" parent="Form"]
margin_top = 281.0
margin_right = 984.0
margin_bottom = 437.0

[node name="UserCredentialsLabel" type="Label" parent="Form/UserCredentialsGroup"]
margin_top = -1.0
margin_right = 984.0
margin_bottom = 21.6667
text = "Steam user credentials for upload"

[node name="HSeparator" type="HSeparator" parent="Form/UserCredentialsGroup"]
margin_top = 26.0
margin_right = 984.0
margin_bottom = 36.0
rect_min_size = Vector2( 0, 10 )

[node name="User" type="GridContainer" parent="Form/UserCredentialsGroup"]
margin_top = 40.0
margin_right = 984.0
margin_bottom = 100.0
columns = 2

[node name="UserLabel" type="Label" parent="Form/UserCredentialsGroup/User"]
margin_top = 2.0
margin_right = 90.0
margin_bottom = 24.6667
text = "User"

[node name="UserNameEdit" type="LineEdit" parent="Form/UserCredentialsGroup/User"]
unique_name_in_owner = true
margin_left = 94.0
margin_right = 984.0
margin_bottom = 28.6667
size_flags_horizontal = 3

[node name="PasswordLabel" type="Label" parent="Form/UserCredentialsGroup/User"]
margin_top = 34.0
margin_right = 90.0
margin_bottom = 56.6667
rect_min_size = Vector2( 90, 0 )
text = "Password"

[node name="PW" type="HBoxContainer" parent="Form/UserCredentialsGroup/User"]
margin_left = 94.0
margin_top = 32.0
margin_right = 984.0
margin_bottom = 60.0
size_flags_horizontal = 3

[node name="UserPasswordEdit" type="LineEdit" parent="Form/UserCredentialsGroup/User/PW"]
unique_name_in_owner = true
margin_right = 763.0
margin_bottom = 28.6667
size_flags_horizontal = 3
secret = true

[node name="CheckBox" type="CheckBox" parent="Form/UserCredentialsGroup/User/PW"]
margin_left = 767.0
margin_right = 826.333
margin_bottom = 28.6667
pressed = true
text = "hide"
flat = true

[node name="SavePW" type="CheckBox" parent="Form/UserCredentialsGroup/User/PW"]
unique_name_in_owner = true
margin_left = 830.0
margin_right = 890.0
margin_bottom = 28.6667
text = "save"
flat = true

[node name="Spacer3" type="Control" parent="Form/UserCredentialsGroup"]
margin_top = 104.0
margin_right = 984.0
margin_bottom = 124.0
rect_min_size = Vector2( 0, 20 )

[node name="UploadButton" type="Button" parent="Form/UserCredentialsGroup"]
unique_name_in_owner = true
margin_left = 442.0
margin_top = 128.0
margin_right = 542.0
margin_bottom = 156.667
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 4
text = "Upload"

[node name="SettingsGroup" type="VBoxContainer" parent="Form"]
margin_top = 442.0
margin_right = 984.0
margin_bottom = 560.0

[node name="SettingsLabel" type="Label" parent="Form/SettingsGroup"]
margin_right = 984.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
text = "Info & Utility"
valign = 2

[node name="HSeparator3" type="HSeparator" parent="Form/SettingsGroup"]
margin_top = 44.0
margin_right = 984.0
margin_bottom = 54.0
rect_min_size = Vector2( 0, 10 )

[node name="Dir" type="HBoxContainer" parent="Form/SettingsGroup"]
margin_top = 58.0
margin_right = 984.0
margin_bottom = 86.0

[node name="DirDescr" type="Label" parent="Form/SettingsGroup/Dir"]
margin_top = 2.0
margin_right = 220.0
margin_bottom = 24.6667
rect_min_size = Vector2( 220, 0 )
text = "tools\\ContentBuilder\\ path:"

[node name="ContentBuilderPathEdit" type="LineEdit" parent="Form/SettingsGroup/Dir"]
unique_name_in_owner = true
margin_left = 224.0
margin_right = 984.0
margin_bottom = 28.6667
hint_tooltip = "absolute path e.g. \"C:\\steam_sdk\\tools\\ContentBuilder\""
size_flags_horizontal = 3
placeholder_text = "Absolute path e.g. \"C:\\steam_sdk\\tools\\ContentBuilder\""

[node name="AdditionalSettings" type="HBoxContainer" parent="Form/SettingsGroup"]
margin_top = 90.0
margin_right = 984.0
margin_bottom = 118.0
custom_constants/separation = 20

[node name="KeepShellOpen" type="CheckBox" parent="Form/SettingsGroup/AdditionalSettings"]
unique_name_in_owner = true
margin_right = 288.0
margin_bottom = 28.6667
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 4
text = "Keep Shell open (problem solving) "

[node name="SetSteamGuardButton" type="Button" parent="Form/SettingsGroup/AdditionalSettings"]
margin_left = 308.0
margin_right = 508.0
margin_bottom = 28.6667
rect_min_size = Vector2( 200, 0 )
text = "Set Steam Guard Code"

[node name="SteamGuardPopup" type="PopupPanel" parent="."]
unique_name_in_owner = true
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0

[node name="Margin" type="MarginContainer" parent="SteamGuardPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="SteamGuardPopup/Margin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 974.0
margin_bottom = 550.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SteamGuardLabel" type="Label" parent="SteamGuardPopup/Margin/VBox"]
margin_top = -1.0
margin_right = 964.0
margin_bottom = 21.6667
rect_min_size = Vector2( 360, 0 )
size_flags_horizontal = 3
text = "Enter Steam Guard code (received via mail)"
align = 1
valign = 2

[node name="HSeparator3" type="HSeparator" parent="SteamGuardPopup/Margin/VBox"]
margin_top = 26.0
margin_right = 964.0
margin_bottom = 36.0
rect_min_size = Vector2( 0, 10 )

[node name="Spacer2" type="Control" parent="SteamGuardPopup/Margin/VBox"]
margin_top = 40.0
margin_right = 964.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 20 )

[node name="SteamGuardCodeEdit" type="LineEdit" parent="SteamGuardPopup/Margin/VBox"]
unique_name_in_owner = true
margin_left = 407.0
margin_top = 64.0
margin_right = 557.0
margin_bottom = 92.6667
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 6
align = 1
max_length = 5

[node name="Spacer" type="Control" parent="SteamGuardPopup/Margin/VBox"]
margin_top = 96.0
margin_right = 964.0
margin_bottom = 116.0
rect_min_size = Vector2( 0, 20 )

[node name="SendSteamGuardButton" type="Button" parent="SteamGuardPopup/Margin/VBox"]
unique_name_in_owner = true
margin_left = 432.0
margin_top = 120.0
margin_right = 532.0
margin_bottom = 148.667
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 4
disabled = true
text = "Send"

[node name="SteamUploadingPopup" type="PopupPanel" parent="."]
unique_name_in_owner = true
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
popup_exclusive = true

[node name="SteamUploadLabel" type="Label" parent="SteamUploadingPopup"]
unique_name_in_owner = true
margin_left = 14.0
margin_top = 14.0
margin_right = 970.0
margin_bottom = 546.0
rect_min_size = Vector2( 360, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme_type_variation = "LabelBig"
text = "Waiting for Content Builder and Upload."
align = 1
valign = 1

[connection signal="toggled" from="Form/UserCredentialsGroup/User/PW/CheckBox" to="Form/UserCredentialsGroup/User/PW/UserPasswordEdit" method="set_secret"]
[connection signal="pressed" from="Form/UserCredentialsGroup/UploadButton" to="." method="_on_UploadButton_pressed"]
[connection signal="text_entered" from="Form/SettingsGroup/Dir/ContentBuilderPathEdit" to="." method="_on_ContentBuilderPathEdit_text_entered"]
[connection signal="toggled" from="Form/SettingsGroup/AdditionalSettings/KeepShellOpen" to="Form/UserCredentialsGroup/User/PW/UserPasswordEdit" method="set_secret"]
[connection signal="pressed" from="Form/SettingsGroup/AdditionalSettings/SetSteamGuardButton" to="." method="_on_SetSteamGuardButton_pressed"]
[connection signal="text_changed" from="SteamGuardPopup/Margin/VBox/SteamGuardCodeEdit" to="." method="_on_SteamGuardCodeEdit_text_changed"]
[connection signal="pressed" from="SteamGuardPopup/Margin/VBox/SendSteamGuardButton" to="." method="_on_SendSteamGuardButton_pressed"]
